--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,10 @@
+browser.autorefresh.Chrome.INTEGRATED=true
+browser.highlightselection.Chrome.INTEGRATED=true
 config.folder=
+file.reference.NetBeansProjects-jl.js=.
 file.reference.projetti-jl.js=.
 files.encoding=UTF-8
 site.root.folder=${file.reference.projetti-jl.js}
+start.file=demo.html
 test.folder=
+web.context.root=/jl
